# VoxelSpaceEngine

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: Renderer.h  Structures.h  voxelspace.h
lib/: Renderer.c  Structures.c
